@@ -106,7 +106,7 @@ public class Fighter_CommandMount extends StdAbility
 			}
 		}
 
-		final PairList<String, Race> choices = Fighter_CallSteed.getMountChoices(mob);
+		final PairList<String, Race> choices = CMLib.utensils().getFavoredMounts(mob);
 		if(((!choices.containsSecond(target.baseCharStats().getMyRace()))
 			&&(!choices.containsFirst(target.baseCharStats().getMyRace().racialCategory())))
 		||(!CMLib.flags().isAnimalIntelligence(target)))
