@@ -1,0 +1,75 @@
+package com.planet_ink.coffee_mud.Abilities.Fighter;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2023-2023 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class Fighter_MountedTactics extends Fighter_FieldTactics
+{
+	@Override
+	public String ID()
+	{
+		return "Fighter_MountedTactics";
+	}
+
+	private final static String localizedName = CMLib.lang().L("Mounted Tactics");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	protected Rideable lastRide = null;
+
+	@Override
+	protected boolean appliesTo(final MOB mob)
+	{
+		final Rideable riding = mob.riding();
+		if(riding == null)
+			return false;
+		if(riding == lastRide)
+			return true;
+		lastRide = null;
+		if(!(riding instanceof MOB))
+			return false;
+		final Race R = ((MOB)riding).baseCharStats().getMyRace();
+		for(final Pair<String,Race> p : CMLib.utensils().getFavoredMounts(mob))
+		{
+			if((R == p.second) || (R.racialCategory().equalsIgnoreCase(p.first)))
+			{
+				lastRide = riding;
+				return true;
+			}
+		}
+		return false;
+	}
+}
