@@ -61,6 +61,7 @@ will see an already pregnant error, and if not, an error for selecting the femal
 
 TAME=ANIMAL_TAMING
 ANIMALTAMEING=ANIMAL_TAMING
+ANIMALTAMING=ANIMAL_TAMING
 ANIMAL_TAMING=<ABILITY>\
 Usage    : TAME [MOB NAME] ([CAGE NAME])\n\r\
 Example  : tame bear cage\n\r\
@@ -1684,6 +1685,17 @@ With this common skill, a player whacks at rock and ground looking to uncover \
 metals, and uncommon stones.  Mining is best done in caves and mountains. \
 You can also bundle multiple resources together using this skill.  The GET command \
 can be used to unbundle such resources.
+
+MTAME=MOUNT_TAMING
+MOUNTTAMEING=MOUNT_TAMING
+MOUNTTAMING=MOUNT_TAMING
+MOUNT_TAMING=<ABILITY>\
+Usage    : MTAME [MOB NAME] ([CAGE NAME])\n\r\
+Example  : mtame horse\n\r\
+This skill allows the player to remove any behaviors, such as aggressiveness \
+or the tendency to roam around, or other behaviors from the target caged or \
+bound mount.  The mounts that can be tamed are extended by racial and favored \
+mount skills.
 
 ORGANIZE=ORGANIZING
 ORGANIZING=<ABILITY>\
