@@ -3264,6 +3264,11 @@ when fighting in the mountains. The fighter \
 can also hide themselves simply by sitting down on the ground and \
 staying still for a few mins.
 
+FIGHTER_MOUNTEDTACTICS=MOUNTED_TACTICS
+MOUNTED_TACTICS=<ABILITY>\
+This skill gives the fighter an edge in attack, defence, and damage \
+when fighting while mounted on a racial or favored mount.
+
 PALADIN_MOUNTEDCHARGE=MOUNTED_CHARGE
 MOUNTEDCHARGE=MOUNTED_CHARGE
 MOUNTED_CHARGE=<ABILITY>\
